--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,10 +6,10 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Empresa Soluction<br />
+    Av Rio Branco, 1238<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    98486-0550
 </address>
 
 <address>
