--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,8 +13,8 @@
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@soluction.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@soluction.com</a>
 </address>
 
 {% endblock %}
